# project2

./: .coverage  README.md  main.py  mylog.txt  pyproject.toml
data/: transactions.csv  transactions_excel.xlsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_transaction_importer_py.html  z_145eef247bfb46b6_transaction_processor_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  transaction_importer.py  transaction_processor.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_transaction_importer.py  test_transaction_processor.py  test_utils.py  test_widget.py
