[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Алексей <denaz2020@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
